# oc_project_8

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py  train_model_improved_top_10.ipynb
.github/workflows/: ci-cd.yml  deploy.yml  test.yml
api/: app.py  database.py  middleware.py  schemas.py  seed_db.py
monitoring/: drift_analysis.ipynb  generate_traffic.py
notebooks/: optimization_performance.ipynb
results/: dataset_top10_features.csv  final_comparison.csv  lightgbm_optimized.onnx  lightgbm_optimized.pkl  optimal_hyperparameters.json  threshold_analysis_lightgbm_baseline.csv  threshold_analysis_lightgbm_optimisé.csv  threshold_analysis_xgboost_optimisé.csv  xgboost_optimized.pkl
tests/: test_api.py
