[project]
name = "credit-scoring-mlops"
version = "0.1.0"
description = "Credit scoring model"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "mlflow>=2.10.0",
    "imbalanced-learn>=0.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "optuna>=4.6.0",
    "missingno>=0.5.2",
]

[tool.setuptools.packages.find]
include = ["api*"]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.27.0",
]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
monitoring = [
    "evidently>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
