[project]
name = "credit-scoring-mlops"
version = "0.1.0"
description = "Credit scoring model"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "mlflow>=2.10.0",
    "imbalanced-learn>=0.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "optuna>=4.6.0",
    "missingno>=0.5.2",
    "evidently>=0.7.20",
    "streamlit>=1.50.0",
]

[tool.setuptools.packages.find]
include = ["api*"]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.27.0",
    "onnxruntime>=1.17.0",
    "psycopg[binary]>=3.1.0",
    "sqlalchemy>=2.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]
optimization = [
    "onnxmltools>=1.12.0",
    "skl2onnx>=1.16.0",
    "onnxruntime>=1.17.0",
]
monitoring = [
    "evidently>=0.5.0",
]
frontend = [
    "streamlit>=1.30.0",
    "requests>=2.31.0",
    "plotly>=5.18.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["api"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
fail_under = 0
show_missing = true
